assets/stylesheets/components/_takeEditor.scss
@mixin overrideDefaultTextArea {
  position: relative;
  z-index: 1;
  width: 100%;
  border: 0;
  overflow: hidden;
  outline: none;
  box-shadow: none;
  resize: none;
}
@mixin textareaHeightDiv {
  position: absolute;
  z-index: -1;
  top: 0;
  left: 0;
  white-space: pre-wrap;
  width: 100%;
  word-wrap: break-word;
}
.editor__wrapper {
  margin: auto;
  padding-top: $page-margin-mobile * 2.25;
  @media #{$mq-medium} {
    padding-top: $content-margin * 2.25;
  }
  width: $column-width;
  max-width: 100%;
  background-color: palette(editor, background);
  position: relative;
  z-index: 10;
}
.editor {
  position: relative;
  padding: 0 $page-margin-mobile;
  @media #{$mq-medium} {
    padding: 0 $page-margin;
  }
  min-height: 300px;
}
.editor__inner {
  position: relative;
}
.editor__title {
  position: relative;
  @include overrideDefaultTextArea;
  @include heading1;
  @include text-margin;
}
.editor__title-height-div {
  @include textareaHeightDiv;
  @include heading1;
  @include text-margin;
}
.editor__title--placeholder {
  opacity: 0.3;
}
.editor__block {
  position: relative;
  z-index: 10;
  @include text-margin;
}
.editor__block--base {
  position: relative;
}
.editor__block--overlay {
  position: absolute;
  //margin-left: 55px; //For visual testing only
}
.editor__paragraph--placeholder {
  opacity: 0.3;
}
.editor__paragraph {
  position: relative;
  @include overrideDefaultTextArea;
  @include body('sans');
}
.editor__paragraph-height-div {
  @include textareaHeightDiv;
  @include body('sans');
}
.editor__document {
  position: relative;
  background: palette(editor, document__background);
  color: palette(editor, text);
  border-radius: 3px;
  padding-left: $page-margin-mobile;
  padding-right: $page-margin-mobile;
  @media #{$mq-medium} {
    padding-left: $content-margin;
    padding-right: $content-margin;
  }
  @include body;
  &:not(.editor__document--no-hover) {
    cursor: pointer;
    &:hover {
      background: palette(editor, document__background--hover);
    }
  }
  p,
  h2 {
    z-index: 1;
    position: relative;
    overflow: hidden;
  }
  > p {
    margin: 0;
  }
}
.editor__document-title {
  @include heading3;
  margin: 0;
  margin-bottom: $page-margin-mobile / 2;
  @media #{$mq-medium} {
    margin-bottom: $content-margin / 2;
  }
}
.editor__document-highlight {
  color: palette(editor, text--highlight);
}
.editor__video {
  display: block;
  margin: auto;
  max-width: 100%;
}

